add missing info to GameInfo

--- a/source/sass/app.scss
+++ b/source/sass/app.scss
@@ -31,6 +31,10 @@ h1, h2, h3 {
     margin: 0 0 0 3px;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .loader-wrap {
     display: flex;
     flex-direction: column;
